# MCIK

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  realestateAnalyzer.py  task.md
.cache/clangd/index/: ascii_torus.cpp.6377D1211A4C1075.idx  controller.hpp.DB9FD787B0C61362.idx  main.cpp.379D351154588CA6.idx  metrics.hpp.A59FE970892ED095.idx  mic_cause_kernel.hpp.74BDF11D087BC613.idx
archive/: README.md  visualize_stock_sensitivity.py
docs/: GPU_INVESTIGATION_SUMMARY.md  MCIK-Raytracing-Haptic-Feeback-Analysis-System  MicroCause_Kernels_Paper_Package copy.md  README.md  ai_feedback_summary.md  geminipro2.5_analysis_and_feedback1.md  geminipro2.5_analysis_and_feedback2.md  geminipro2.5_analysis_and_feedback3.md  geminipro2.5_analysis_and_feedback5.md  geminipro2.5_analysis_and_feedback6.md  geminipro2.5_analysis_and_feedback7.md  geminipro2.5_analysis_and_feedback9.md  main.cpp  mcik-tensf-pcm-test1.py  mcik_medium_introduction.md  mcik_pcm_experiment_summary.md  perplexity_analysis_and_feedback1.md  perplexity_analysis_and_feedback2.md  perplexity_analysis_and_feedback3.md
experiments/: signalmill_engine.py
experiments/ascii_torus/: README.md
experiments/ascii_torus/cpp/: ascii_torus.cpp  mcik_controller.hpp  metrics.hpp
experiments/ascii_torus/python/: ascii_torus.py  mcik_controller.py  metrics.py
experiments/pcm/: README.md  mcik_tensf_pcm_test1.py
experiments/real_estate/: 1dlatticevisualization.py  2dlattice3dvisualizationrealestate.py  2dlatticerealestate.py  README.md
modules/cpp/include/mcik/: mic_cause_kernel.hpp
modules/cpp/src/: main.cpp
modules/python/: README.md  pyproject.toml
modules/python/mcik/: __init__.py  lattice_v1.py
modules/python/mcik/experiments/: __init__.py
modules/python/mcik/experiments/ascii_torus/: __init__.py
python_module/: .python-version  1dlatticevis2ndorder.py  README.md
python_module/src/: mcik_class.py
test_data/ascii_torus/: bench.csv
tests/: conftest.py
tests/ascii_torus/: test_metrics.cpp  test_metrics.py
