[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcik"
version = "0.1.0"
description = "Micro-Cause Influence Kernel research utilities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
experiments = ["matplotlib", "numpy"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = ["."]
